--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
     -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
  
-    <title>React Redux App</title>
+    <title>Support Desk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
